upload styles jan2

--- a/styles.css
+++ b/styles.css
@@ -298,7 +298,7 @@ h4 {
      margin-right: auto;
    }
 
-.ornament1, .ornament2 {
+.ornament1, .ornament2,.ornament3 {
   visibility: collapse;
 }
 
@@ -406,7 +406,7 @@ h4 {
      margin-right: auto;
    }
 
-.ornament1, .ornament2 {
+.ornament1, .ornament2, .ornament3 {
   visibility: collapse;
 }
 
