--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,8 @@ menu {
 i {
   /* color: #FF9234; */
   color: #FF9300;
-  text-shadow: 1px 1px 2px #FF9300;
+  /* text-shadow: 1px 1px 2px #FF9300; */
+  text-shadow: 2px 2px 4px grey;
   font-size: 1.9em;
 }
 
