--- a/styles.css
+++ b/styles.css
@@ -217,6 +217,7 @@ h4 {
   border-radius: 8%;
   background-color: rgb(255, 146, 52, 0.23);
   /* background-color: rgb(255, 147, 1, 0.2); */
+  box-shadow: 5px 10px 18px #888888;
   padding-top: 1.5%;
   padding-left: 1.5%;
   padding-right: 1.5%;
